AI-JADEDEVS4/src/objects/Partner_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account of Contact who achieved the Certification</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NE_Partner_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification_ID__c</fullName>
        <description>Certification ID</description>
        <label>Certification ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Score__c</fullName>
        <description>Certification Score</description>
        <label>Certification Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <description>Certification Status</description>
        <label>Certification Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Version__c</fullName>
        <description>Certification Version</description>
        <label>Certification Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date Certification was completed</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NE_Partner_Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrolled_Date__c</fullName>
        <description>Enrolled Date</description>
        <label>Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NECertification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NECertification cert version 1</description>
        <label>NECertification</label>
        <referenceTo>NECertification__c</referenceTo>
        <relationshipName>NE_Partner_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NE-{0000000000}</displayFormat>
        <label>Partner Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>